@@ -1,4 +1,4 @@
-.TH "ssh_filter_btrbk" "1" "2017-07-30" "btrbk v0.25.1" ""
+.TH "ssh_filter_btrbk" "1" "2017-08-21" "btrbk v0.26.0-dev" ""
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
@@ -21,8 +21,8 @@ Note that the following btrfs commands are always allowed: "btrfs
 subvolume show", "btrfs subvolume list".
 .PP
 Note that commands for stream compression (pipes through gzip, pigz,
-bzip2, pbzip2, xz, lzo, lz4) as well as rate limiting (pipes through
-"pv -L") are always allowed.
+bzip2, pbzip2, xz, lzo, lz4), rate limiting (pipes through "pv -L"),
+and stream buffer (pipes through "mbuffer") are always allowed.
 .PP
 Example line in /root/.ssh/authorized_keys on a backup target host:
 .PP
